[package]
name = "neon"
version = "0.1.0"
authors = ["IWANABETHATGUY <974153916@qq.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "neon"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
[profile.release]
opt-level = 3
lto = true
